fixed contrast v-1

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,8 +1,8 @@
 $box-shadow-light: 0 0 3px #ccc;
 $color-white-light: rgb(245, 245, 245);
 $text-dark-light: rgb(97, 97, 97);
-$primary-color: salmon;
-$secondary-color: #fbc5bf;
+$primary-color: #ff5e4b;
+$secondary-color: #cd7c5d;
 $header-text-large: 4rem;
 $header-text: 3rem;
 $normal-text: 2rem;
